--- a/Addressee.UnitTests/Addressee.UnitTests.csproj
+++ b/Addressee.UnitTests/Addressee.UnitTests.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
+  <PropertyGroup>    
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.7.1" />
+    <PackageReference Include="FluentAssertions" Version="4.19.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="AU\" />
-    <Folder Include="RU\" />
+    <ProjectReference Include="..\Addressee\Addressee.csproj" />
   </ItemGroup>
 
 </Project>
